# atypic

./: .gitignore  .readthedocs.yaml  README.md  _.readthedocs.yaml  atypic_gui.py  doc.md  pyproject.toml  test.ipynb
_docs/: conf.py  index.rst
atypic/: __init__.py  effects.py  mask.py
docs/: atypic.rst  conf.py  index.rst  modules.rst  requirements.txt
docs/_build/: .buildinfo  atypic.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/.doctrees/: atypic.doctree  environment.pickle  index.doctree
docs/_build/_modules/: index.html
docs/_build/_modules/atypic/: effects.html  mask.html
docs/_build/_sources/: index.rst.txt
docs/_build/doctrees/: atypic.doctree  environment.pickle  index.doctree  modules.doctree
docs/_build/html/: ._atypic.html  ._genindex.html  ._index.html  .buildinfo  .buildinfo.bak  atypic.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/atypic/: effects.html  mask.html
docs/_build/html/_sources/: atypic.rst.txt  index.rst.txt
src/atypic/: __init__.py  effects.py  mask.py
tests/: test_atypic.py
