[project]
name = "atypic"
version = "0.0.1"
authors = [
  { name="Jared Casarez", email="jaredcasarez1@gmail.com" },
]
description = "Image editing, but wrong."

dependencies = [
  "numpy",
  "opencv-python",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
  "*.py"
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"

[project.urls]
Homepage = "https://github.com/jaredcasarez/atypic"